app index overflow-y bug fix test1

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -1,3 +1,7 @@
+body {
+    overflow-y: hidden;
+}
+
 body > main#splashscreen {
     box-sizing: border-box;
 }
